--- a/api/templates/index.html
+++ b/api/templates/index.html
@@ -126,6 +126,12 @@
             <h5>(try tapping on this one)</h5>
         </div>
     </section>
+    <section class="wide-box secondary copyright" id="walls">
+        <div class="center-text">
+            <h1>Wallpapers!</h1>
+            <a href="/walls">Check them out! ↗️</a>
+        </div>
+    </section>
     <section class="wide-box secondary" id="contact-me">
         <div class="center-text">
             <h1>Places to Find Me</h1>
