--- a/api/templates/walls.html
+++ b/api/templates/walls.html
@@ -21,7 +21,7 @@
     <section class="wide-box secondary extend" style="margin-top: 50px;">
         <div class="center-text">
             <h1>Duvall Aurora</h1>
-            <img src="/static/images/Duvall%20Aurora.png" alt="Duvall Aurora" style="position: static; margin-left: auto; margin-right: auto; width:25%">
+            <img src="/static/images/aurora.png" alt="Duvall Aurora" style="position: static; margin-left: auto; margin-right: auto; width:25%">
             <p></p><a href="https://www.flickr.com/photos/somebody4545/53735928254/in/datetaken-public/">Full Resolution on Flickr</a></p>
         </div>
     </section>
