website 3d works again!

--- a/api/templates/index.html
+++ b/api/templates/index.html
@@ -168,7 +168,7 @@
 <script type="importmap">
     {
       "imports": {
-        "@splinetool/runtime": "https://unpkg.com/@splinetool/runtime@0.9.493/build/runtime.js"
+        "@splinetool/runtime": "https://cdn.jsdelivr.net/npm/@splinetool/runtime@1.5.5/build/runtime.min.js"
       }
     }
 </script>
