--- a/api/static/css/index.css
+++ b/api/static/css/index.css
@@ -387,3 +387,14 @@ h3 {
     justify-content: center;
     gap: 10px;
 }
+
+.wallpaper-image {
+    position: static;
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 50%;
+    width: 30vh;
+    border-radius: 10px;
+    border: 4px solid;
+    border-color: #0b0d19;
+}
