--- a/api/templates/walls.html
+++ b/api/templates/walls.html
@@ -21,7 +21,7 @@
     <section class="wide-box secondary extend" style="margin-top: 50px;">
         <div class="center-text">
             <h1>Duvall Aurora</h1>
-            <img src="/static/images/aurora.png" alt="Duvall Aurora" style="position: static; margin-left: auto; margin-right: auto; width:25%">
+            <img src="/static/images/aurora.png" alt="Duvall Aurora" class="wallpaper-image">
             <p></p><a href="https://www.flickr.com/photos/somebody4545/53735928254/in/datetaken-public/">Full Resolution on Flickr</a></p>
         </div>
     </section>
@@ -30,14 +30,14 @@
             <h1>National Museum of Nuclear Science & History</h1>
             <h3>Republic F-105 Thunderchief</h3>
             <br>
-            <img src="/static/images/f105.png" alt="Republic F-105 Thunderchief" style="position: static; margin-left: auto; margin-right: auto; width:25%">
+            <img src="/static/images/f105.png" alt="Republic F-105 Thunderchief" class="wallpaper-image">
             <p></p><a href="https://flickr.com/photos/somebody4545/53735934669/in/datetaken-public/">Full Resolution on Flickr</a></p>
         </div>
     </section>
         <section class="wide-box secondary extend" style="margin-top: 50px;">
         <div class="center-text">
             <h1>White Sands Panorama</h1>
-            <img src="/static/images/whitesandspano.png" alt="White Sands Nat'l Park" style="position: static; margin-left: auto; margin-right: auto; width:25%">
+            <img src="/static/images/whitesandspano.png" alt="White Sands Nat'l Park" class="wallpaper-image">
             <p></p><a href="https://www.flickr.com/photos/somebody4545/53735800433/in/datetaken-public/">Full Resolution on Flickr</a></p>
         </div>
     </section>
