made content order clearer for search

--- a/api/templates/walls.html
+++ b/api/templates/walls.html
@@ -7,6 +7,7 @@
     {% block head %}
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
     {% endblock head %}
+    <title>Somebody4545's Wallpapers</title>
 </head>
 
 <body>{% block content %}
@@ -20,14 +21,14 @@
     </section>
     <section class="wide-box secondary extend" style="margin-top: 50px;">
         <div class="center-text">
-            <h1>Duvall Aurora</h1>
+            <h2>Duvall Aurora</h2>
             <img src="/static/images/aurora.png" alt="Duvall Aurora" class="wallpaper-image">
             <p></p><a href="https://www.flickr.com/photos/somebody4545/53735928254/in/datetaken-public/">Full Resolution on Flickr</a></p>
         </div>
     </section>
     <section class="wide-box secondary extend" style="margin-top: 50px;">
         <div class="center-text">
-            <h1>National Museum of Nuclear Science & History</h1>
+            <h2>National Museum of Nuclear Science & History</h2>
             <h3>Republic F-105 Thunderchief</h3>
             <br>
             <img src="/static/images/f105.png" alt="Republic F-105 Thunderchief" class="wallpaper-image">
@@ -36,7 +37,7 @@
     </section>
         <section class="wide-box secondary extend" style="margin-top: 50px;">
         <div class="center-text">
-            <h1>White Sands Panorama</h1>
+            <h2>White Sands Panorama</h2>
             <img src="/static/images/whitesandspano.png" alt="White Sands Nat'l Park" class="wallpaper-image">
             <p></p><a href="https://www.flickr.com/photos/somebody4545/53735800433/in/datetaken-public/">Full Resolution on Flickr</a></p>
         </div>
