--- a/api/templates/index.html
+++ b/api/templates/index.html
@@ -33,6 +33,7 @@
     <section class="wide-box">
         <div class="center-text">
             <h1 id="hi">Hi!</h1>
+            <a href="https://me.ineshd.com">sneak peek at new site!</a>
             <p style="padding-left: 50px; padding-right: 50px">I build websites, play the guitar, 3d model, and grind my homework. Here are some of the things I have done! (or will do, when the time is right)</p>
             <!--            <a href="https://somebody4545.repl.co">-->
             <!--                <button>-->
